--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 node_modules/
 
 # env files
-
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Next.js build output
 .next/
