--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "1.3.1",
+    "@vercel/blob": "^2.0.0",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -46,6 +48,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "7.0.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
@@ -54,16 +57,13 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "resend": "6.6.0",
     "sonner": "^1.7.4",
+    "swr": "2.3.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.25.76",
-    "mongodb": "7.0.0",
-    "bcryptjs": "3.0.3",
-    "resend": "6.6.0",
-    "swr": "2.3.7",
-    "@vercel/blob": "2.0.0"
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
